wisski_editlayout/css/std/edit-form.css
/* tweaks for the link dialog/linkit widget for non-Seven themes */
div.editor-link-dialog.ui-dialog--narrow {
  /* make dialog as wide as it needs */
  max-width: 95%;
}
div.editor-link-dialog.ui-dialog--narrow #drupal-modal.ui-dialog-content {
  /* this allows the linkit dropdown to flow out of the bounding dialog content */
  position: static;
}



/* simple singel value input */

/* do some overwriting because drupal is stupid. */
body {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
}

table {
  font-family: inherit !important;
  
  font-size: 0.929em !important;
  position: relative;
  display: table-cell;
}

form .form-item label:after {
  content: ":";
}

form .form-item input {
  margin-left: 38px;
}


/* simple multi value fields */ 

form .field-multiple-table {
  width: inherit;
}

form .form-item .tabledrag-toggle-weight-wrapper {
  /* hide the toggle weights functionality */
  display: none;
}

table.field-multiple-table > div {
  float: right;
}

form .form-item table thead tr {
  border: 0;
  background: none;
}

form .form-item table thead tr th {
  border: 0;
  background: none;
  color: inherit;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 0;
}

form .form-item table thead tr th.field-label {
  text-transform: none;
}

form .form-item table thead tr th.field-label:after {
  content: ":";
}

form .form-item table tbody tr {
  border: 0;
}

form .form-item table tbody td {
  padding: 2px;
}

form .form-item table tbody td input {
  margin-left: 0;
}

form .form-item .field-add-more-submit.button,
form .form-item .field-add-more-submit.button:hover,
form .form-item .field-add-more-submit.button:focus,
form .field--widget-inline-entity-form-complex input[data-drupal-selector$="actions-ief-add"],
form .field--widget-inline-entity-form-complex input[data-drupal-selector$="actions-ief-entity-edit"],
form .field--widget-inline-entity-form-complex input[data-drupal-selector$="actions-ief-entity-remove"],
form .field--widget-inline-entity-form-complex input[data-drupal-selector$="actions-ief-edit-save"],
form .field--widget-inline-entity-form-complex input[data-drupal-selector$="actions-ief-edit-cancel"],
form .field--widget-inline-entity-form-complex input[data-drupal-selector$="actions-ief-add-save"],
form .field--widget-inline-entity-form-complex input[data-drupal-selector$="actions-ief-add-cancel"]
{
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 60%;

  text-indent: 100px;
  font-size: 0 !important;
  margin: 0 0 0 15px;
  
  width:29px;
  height:29px;
  line-height:25px;
  border-radius: 50%;
  color:#f5f5f5;
  text-align:center;
  text-decoration:none;
  box-shadow: 0 0 3px gray;
  font-size:20px;
  font-weight:bold;
}

form .form-item .field-add-more-submit.button,
form .form-item .field-add-more-submit.button:hover,
form .form-item .field-add-more-submit.button:focus,
form .field--widget-inline-entity-form-complex input[data-drupal-selector$="actions-ief-add"]
{
  background-image: url('../../images/icons/plus.png');
}


form .field--widget-inline-entity-form-complex input[data-drupal-selector$="actions-ief-entity-edit"]
{
  background-image: url('../../images/icons/pen.png');
}

form .field--widget-inline-entity-form-complex input[data-drupal-selector$="actions-ief-add-cancel"],
form .field--widget-inline-entity-form-complex input[data-drupal-selector$="actions-ief-edit-cancel"],
form .field--widget-inline-entity-form-complex input[data-drupal-selector$="actions-ief-entity-remove"]
{
  background-image: url('../../images/icons/cross.png');
}

form .field--widget-inline-entity-form-complex input[data-drupal-selector$="actions-ief-add-save"],
form .field--widget-inline-entity-form-complex input[data-drupal-selector$="actions-ief-edit-save"]
{
  background-image: url('../../images/icons/check.png');
}


form .form-item .clearfix {
    position: relative;
    top: 23px;
    display: table-cell;
}

.form-item, .form-actions {
    position: relative;
    width: auto;
 /*   display: table-row-group;  // this makes the subgroup labels disappear in chrome */
}

.form-composite > legend, .label {
  font-weight: initial;
}

